--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
       "name": "The Anki Vector",
-      "description": "An Anime themed Telegram group management bot.",
+      "description": "An Anime themed Telegram group managements bot.",
       "logo": "https://telegra.ph/file/e10a45d0433a1ab6fed7b.jpg",
       "keywords": [
          "telegram",
